--- a/简历.md
+++ b/简历.md
@@ -16,17 +16,20 @@
 ## 联系方式 ：
 微信   : china-mind  
 手机    : [166-1978-8994](tel:166-1978-8994)  
-e-mail : [x@liuxiaosa.club](mailto:x@liuxiaosa.club)  
+e-mail : [xiao.sa@icloud.com]](mailto:xiao.sa@icloud.com)  
 github : https://github.com/xiaosa66
 
 ## 专业技能 ：
-| 技能        | 分数    |
+| 技能        | 分数     |
 | --------   | -----:  |
-| JavaScript     | 75' |
-| HTML        |   75'  |
+| JavaScript |    76'  |
+| HTML       |    75'  |
 | CSS        |    68'  |
-| vue        |    70'  |
+| Vue.js     |    75'  |
+| node.js    |    70'  |
 | git        |    75'  |
+| docker     |    60'  |
+| linux      |    60'  |
 
 
 
@@ -64,9 +67,6 @@ github : https://github.com/xiaosa66
         小程序使用原生技术，后端使用微信提供的云开发服务（sass）。
     
 
-
-
-
 [2.果蔬好电商网站](https://github.com/xiaosa66/guoshuhao)
 
     2019/04 - 2019-06
@@ -86,4 +86,4 @@ github : https://github.com/xiaosa66
 ### 自我评价
     
         从2017年接触前端以来已经积累了一部分中小型项目的开发经验，有基础的自主编程能力与团队合作能力。  
-        对现代前端开发较为熟悉。本人思想端正、积极向上、适应力强。工作中能吃苦肯钻研，能承受工作压力，注重长期稳定的发展机会。
+        对现代前端开发较为熟悉。本人思想端正、积极向上、适应力强。工作中能吃苦肯钻研，注重长期稳定的发展机会。
