--- a/简历.md
+++ b/简历.md
@@ -16,7 +16,7 @@
 ## 联系方式 ：
 微信   : china-mind  
 手机    : [166-1978-8994](tel:166-1978-8994)  
-e-mail : [xiao.sa@icloud.com]](mailto:xiao.sa@icloud.com)  
+e-mail : [xiao.sa@icloud.com](mailto:xiao.sa@icloud.com)  
 github : https://github.com/xiaosa66
 
 ## 专业技能 ：
