添加微信二维码

--- a/简历.md
+++ b/简历.md
@@ -1,8 +1,8 @@
-# 刘潇洒 2020毕业 web前端
+# 刘潇洒 2020 毕业 web 前端
 
 
 <p align="left">
-  <img alt="avatar" src="https://zuifeiyi-1258006205.cos.ap-beijing.myqcloud.com/IMG_5926.JPG" width="100" max-width="100%">
+  <img alt="avatar" src="https://imgs-1258006205.cos.ap-beijing.myqcloud.com/IMG_7681.JPG" width="200rem" max-width="100%">
 </p>
 
 ## 基本资料 : 
@@ -50,7 +50,7 @@ github : https://github.com/xiaosa66
             大愚智能科技有限公司 前端实习生 
             是我踏上前端之路的第一步。在实习过程中，我协助多个小程序的前端开发，涉及电商，社交等。
     
-### 项目经历 :
+## 项目经历 :
 
 1.醉非遗　小程序
 <p align="center">
@@ -83,7 +83,11 @@ github : https://github.com/xiaosa66
         使用vue + elementUI + koa2 + MySQL。
 
    
-### 自我评价
+## 自我评价
     
         从2017年接触前端以来已经积累了一部分中小型项目的开发经验，有基础的自主编程能力与团队合作能力。  
         对现代前端开发较为熟悉。本人思想端正、积极向上、适应力强。工作中能吃苦肯钻研，注重长期稳定的发展机会。
+
+<p align="center">
+  <img alt="minaCode" src="https://imgs-1258006205.cos.ap-beijing.myqcloud.com/IMG_7683.JPG" width="200rem" max-width="100%">
+</p>
