--- a/简历.md
+++ b/简历.md
@@ -28,8 +28,8 @@ github : https://github.com/xiaosa66
 | Vue.js     |    75'  |
 | node.js    |    70'  |
 | git        |    75'  |
-| docker     |    60'  |
 | linux      |    60'  |
+| docker     |    60'  |
 
 
 
@@ -60,7 +60,7 @@ github : https://github.com/xiaosa66
 
     2019/08 - 2019/08
 
-        一个校园比赛项目，包含论坛功能（因为没有相关资质　改成留言得以过审）与商城功能（因为没有资质　以网站的方式在小程序内打开　暂时无法支付。
+        一个校园比赛项目,包含论坛功能(因为没有相关资质,改成留言得以过审)与商城功能(因为没有资质,以 webview 的方式在小程序内打开,暂时无法支付。)
 
         获得三创赛北京赛区第一名，全国一等奖。
 
@@ -72,7 +72,7 @@ github : https://github.com/xiaosa66
     2019/04 - 2019-06
 
         一个电商网站.
-        前端使用vue全家桶，后端使用koa2 + MySQL。
+        前端使用 Vue 全家桶，后端使用 Koa2 + MySQL。
 
 
 [3.比赛后台管理系统](https://github.com/xiaosa66/compManage)
@@ -80,7 +80,7 @@ github : https://github.com/xiaosa66
     2019/04 - 2019/06
 
         一个简易的后台管理系统。
-        使用vue + elementUI + koa2 + MySQL。
+        使用Vue + ElementUI + Koa2 + MySQL。
 
    
 ## 自我评价
@@ -88,6 +88,8 @@ github : https://github.com/xiaosa66
         从2017年接触前端以来已经积累了一部分中小型项目的开发经验，有基础的自主编程能力与团队合作能力。  
         对现代前端开发较为熟悉。本人思想端正、积极向上、适应力强。工作中能吃苦肯钻研，注重长期稳定的发展机会。
 
+## 扫一扫 加我好友
+
 <p align="center">
-  <img alt="minaCode" src="https://imgs-1258006205.cos.ap-beijing.myqcloud.com/IMG_7683.JPG" width="200rem" max-width="100%">
+  <img alt="wechatCode" src="https://imgs-1258006205.cos.ap-beijing.myqcloud.com/IMG_7683.JPG" width="200rem" max-width="100%">
 </p>
